updated bll with factory, ulpdated dal for delete ticket, edited tecnicopage xaml
updated bll with factory, ulpdated dal for delete ticket, edited tecnicopage xaml

--- a/Ticket2Help/Views/TicketsTecnicoPage.xaml
+++ b/Ticket2Help/Views/TicketsTecnicoPage.xaml
@@ -139,6 +139,13 @@
                             Click="BtnDetalhes_Click"
                             Margin="5"
                             IsEnabled="False"/>
+
+                    <Button x:Name="btnEliminar" 
+                            Content="🗑️ Eliminar" 
+                            Style="{StaticResource PrimaryButton}"
+                            Click="BtnEliminar_Click"
+                            Margin="5"
+                            IsEnabled="False"/>
                 </StackPanel>
 
                 <!-- Estatísticas Rápidas -->
