--- a/Ticket2Help/Views/TicketsColaboradorPage.xaml
+++ b/Ticket2Help/Views/TicketsColaboradorPage.xaml
@@ -115,6 +115,12 @@
                             Click="BtnDetalhes_Click"
                             Margin="5"
                             IsEnabled="False"/>
+                    <Button x:Name="btnEliminar" 
+                            Content="🗑️ Eliminar" 
+                            Style="{StaticResource PrimaryButton}"
+                            Click="BtnEliminar_Click"
+                            Margin="5"
+                            IsEnabled="False"/>
                 </StackPanel>
 
                 <!-- Estatísticas Rápidas (alterado último item) -->
