--- a/Ticket2Help/MainWindow.xaml
+++ b/Ticket2Help/MainWindow.xaml
@@ -72,6 +72,12 @@
                                Style="{StaticResource MenuButtonStyle}"
                                Click="BtnDashboard_Click"
                                Visibility="Collapsed"/>
+                        
+                        <Button x:Name="btnAdd" 
+                               Content="Dashboard" 
+                               Style="{StaticResource MenuButtonStyle}"
+                               Click="btnAdd"
+                               Visibility="Collapsed"/>
                     </StackPanel>
                 </StackPanel>
 
