--- a/Ticket2Help/Views/TicketsColaboradorPage.xaml
+++ b/Ticket2Help/Views/TicketsColaboradorPage.xaml
@@ -111,7 +111,7 @@
                             Margin="5"/>
                     <Button x:Name="btnDetalhes" 
                             Content="👁 Ver Detalhes" 
-                            Style="{StaticResource SecondaryButton}"
+                            Style="{StaticResource PrimaryButton}"
                             Click="BtnDetalhes_Click"
                             Margin="5"
                             IsEnabled="False"/>
