--- a/Ticket2Help/Views/TicketsTecnicoPage.xaml
+++ b/Ticket2Help/Views/TicketsTecnicoPage.xaml
@@ -135,7 +135,7 @@
 
                     <Button x:Name="btnDetalhes" 
                             Content="👁 Ver Detalhes" 
-                            Style="{StaticResource SecondaryButton}"
+                            Style="{StaticResource PrimaryButton}"
                             Click="BtnDetalhes_Click"
                             Margin="5"
                             IsEnabled="False"/>
